lazy loading for pictures index

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <section class="main swiper mySwiper">
       <div class="wrapper swiper-wrapper">
         <div class="slide swiper-slide">
-          <img src="pictures/Bild5.jpg" alt="" class="image" />
+          <img loading="lazy" src="pictures/Bild5.jpg" alt="" class="image" />
           <div class="image-data">
             <span class="text">Starting with a ToDo List</span>
             <h2>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="slide swiper-slide">
-          <img src="pictures/Bild4.jpg" alt="" class="image" />
+          <img loading="lazy" src="pictures/Bild4.jpg" alt="" class="image" />
           <div class="image-data">
             <span class="text">We really like what we do.</span>
             <h2>
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="slide swiper-slide">
-          <img src="pictures/Bild6.jpg" alt="" class="image" />
+          <img loading="lazy" src="pictures/Bild6.jpg" alt="" class="image" />
           <div class="image-data">
             <span class="text">Take us with you on your journeys!</span>
             <h2>
@@ -173,7 +173,7 @@
       </aside>
     </div>
     <div class="image-container">
-      <img src="pictures/Bild1.jpg" alt="Description of your image" />
+      <img loading="lazy" src="pictures/Bild1.jpg" alt="Description of your image" />
       <div class="text-overlay">
         <h1>Easily organise your Work with our Solution To-Do List!</h1>
       </div>
@@ -187,6 +187,7 @@
       <div class="flex-item">
         <div class="flex-content">
           <img
+            loading="lazy"
             src="pictures/productivity.jpg"
             alt="productivity"
             class="pictures"
@@ -206,6 +207,7 @@
       <div class="flex-item">
         <div class="flex-content">
           <img
+            loading="lazy"
             src="pictures/Integrateability.jpg"
             alt="Integreatability"
             class="pictures"
@@ -226,7 +228,7 @@
     <div class="flex-container-unten">
       <div class="flex-item">
         <div class="flex-content">
-          <img src="pictures/family.jpg" alt="family" class="pictures" />
+          <img loading="lazy" src="pictures/family.jpg" alt="family" class="pictures" />
           <div class="flex-text">
             <h4>Collaborative Planning with Friends and Family:</h4>
             <p>
@@ -241,7 +243,7 @@
       </div>
       <div class="flex-item">
         <div class="flex-content">
-          <img src="pictures/easytouse.jpg" alt="easytouse" class="pictures" />
+          <img loading="lazy" src="pictures/easytouse.jpg" alt="easytouse" class="pictures" />
           <div class="flex-text">
             <h4>Easy to Use:</h4>
             <p>
@@ -259,7 +261,7 @@
 
     <div class="card-list">
       <a class="card-item">
-        <img src="pictures/Bild2.jpg" alt="Card Image" />
+        <img loading="lazy" src="pictures/Bild2.jpg" alt="Card Image" />
         <span class="listen">Create a List</span>
         <h3>Creating and change a list</h3>
         <p>
@@ -269,7 +271,7 @@
         </p>
       </a>
       <a class="card-item">
-        <img src="pictures/Bild3.jpg" alt="Card Image" />
+        <img loading="lazy" src="pictures/Bild3.jpg" alt="Card Image" />
         <span class="benutzer">User interface</span>
         <h3>User-friendly interface.</h3>
         <p>
@@ -279,7 +281,7 @@
         </p>
       </a>
       <a class="card-item">
-        <img src="pictures/Bild7.jpg" alt="Card Image" />
+        <img loading="lazy" src="pictures/Bild7.jpg" alt="Card Image" />
         <span class="editor">Collaboration and Sharing:</span>
         <h3>Collaboration and Sharing</h3>
         <p>
@@ -290,7 +292,7 @@
       </a>
     </div>
     <div class="image-container">
-      <img src="pictures/Bild8.jpg" alt="Description of your image" />
+      <img loading="lazy" src="pictures/Bild8.jpg" alt="Description of your image" />
       <div class="text-overlay">
         <h1>Easily organise your Work with our Solution To-Do List!</h1>
       </div>
