--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 
 
     <div class="card-list">
-      <a class="card-item">
+      <a href="#" class="card-item">
         <img src="pictures/Bild2.jpg" alt="Card Image" />
         <span class="listen">Create a List</span>
         <h3>Creating and change a list</h3>
@@ -205,7 +205,7 @@
           and do it.
         </p>
       </a>
-      <a class="card-item">
+      <a href="#" class="card-item">
         <img src="pictures/Bild3.jpg" alt="Card Image" />
         <span class="benutzer">User interface</span>
         <h3>User-friendly interface.</h3>
@@ -215,7 +215,7 @@
           categorized with start date and end date.
         </p>
       </a>
-      <a class="card-item">
+      <a href="#" class="card-item">
         <img src="pictures/editor.jpg" alt="Card Image" />
         <span class="editor">Editor</span>
         <h3>An "editor" ensures content quality and accuracy.</h3>
@@ -250,7 +250,7 @@
         <div class="slide swiper-slide">
           <img src="pictures/Bild 1.jpg" alt="" class="image" />
           <div class="image-data">
-            <span class="text">Take us with you on your journeys!</span>
+            <span class="text">Take us with you on your journeys!ä</span>
             <h2>
               Planning upcoming travels <br />
               and keeping the oversight
