--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         <li><a href="login.html">Login</a></li>
       </ul>
     </nav>
+    <!-- Swiper-->
     <section class="main swiper mySwiper">
       <div class="wrapper swiper-wrapper">
         <div class="slide swiper-slide">
