--- a/public/team.html
+++ b/public/team.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="team-member">
         <div class="image">
-          <img src="pictures/Bild2.jpg" alt="Team Member 1" />
+          <img src="pictures/backend-developer1.jpg" alt="Team Member 1" />
         </div>
         <div class="info">
           <h2>Tim Brielmayer</h2>
@@ -52,7 +52,7 @@
       </div>
       <div class="team-member">
         <div class="image">
-          <img src="pictures/Bild2.jpg" alt="Team Member 1" />
+          <img src="pictures/frontend-developer.jpg" alt="Team Member 1" />
         </div>
         <div class="info">
           <h2>Tobias Stoppelkamp</h2>
@@ -71,7 +71,7 @@
 
     <div class="team-member">
       <div class="image">
-        <img src="pictures/Bild2.jpg" alt="Team Member 1" />
+        <img src="pictures/backend-developer2.jpg" alt="Team Member 1" />
       </div>
       <div class="info">
         <h2>Philipp Staudinger</h2>
@@ -89,7 +89,7 @@
 
     <div class="team-member">
       <div class="image">
-        <img src="pictures/Bild2.jpg" alt="Team Member 1" />
+        <img src="pictures/frontend-developer2.jpg" alt="Team Member 1" />
       </div>
       <div class="info">
         <h2>Dominik Kienle</h2>
