--- a/public/mission.html
+++ b/public/mission.html
@@ -42,21 +42,26 @@
           <ul class="list">
             <li>
               <h3>Easier to use:</h3>
-              <p>With our intuitive user interface, you can easily create, edit, and organize tasks. We are continually working to make these functions even more user-friendly.</p>
+              <p>With our intuitive user interface, you can easily create, edit, and organize tasks. We are continually
+                working to make these functions even more user-friendly.</p>
             </li>
             <li>
               <h3>List subscription:</h3>
-              <p>If you'd like to be reminded to empty the garbage cans by the waste collection service and synchronize this task with your household, we are in the process of enabling companies to implement their schedules into a to-do list as a single task. As a user, these tasks can be subscribed to a self-created to-do list and will update automatically.</p>
+              <p>If you'd like to be reminded to empty the garbage cans by the waste collection service and synchronize
+                this task with your household, we are in the process of enabling companies to implement their schedules
+                into a to-do list as a single task. As a user, these tasks can be subscribed to a self-created to-do
+                list and will update automatically.</p>
             </li>
           </ul>
         </section>
-  
+
         <section>
           <h2>Coming Features:</h2>
           <ul class="list">
             <li>
               <h3>Connection with smart home devices:</h3>
-              <p>Integrate your tasks into your everyday life. Receive notifications on your smart devices and synchronize your to-do list with your smart home.</p>
+              <p>Integrate your tasks into your everyday life. Receive notifications on your smart devices and
+                synchronize your to-do list with your smart home.</p>
             </li>
             <li>
               <h3>Launch the website as an app:</h3>
@@ -67,7 +72,7 @@
       </div>
     </section>
   </div>
-  
+
 
 
 
